# COM-2024-udpcanlib

./: CMakeLists.txt
include/: udpcan.hpp
modules/can/: CMakeLists.txt
modules/can/include/: can.hpp  definitions.h  message_definitions.hpp
modules/can/src/: bitarray.cpp  candatabase.cpp  candesc.cpp  fileop.cpp
modules/can/test/: test.cpp
modules/net/: CMakeLists.txt
modules/net/include/: defines.h  net.hpp
modules/net/src/: net.cpp
modules/net/test/: test.cpp
pybind/: bindings.cpp
pytest/: pytest.py
src/: udpcan.cpp
test/: test.cpp
